[FIX] point_of_sale: limit category display to two rows
Before this commit, the PoS interface could become cluttered when
hundreds of categories were loaded, covering the entire screen in
desktop browsing.

This commit addresses the issue by limiting the category display to two
rows and adding a scrollbar for overflow, improving the user experience
when there are many categories.

opw-3865072

--- a/addons/point_of_sale/static/src/app/screens/product_screen/product_screen.scss
+++ b/addons/point_of_sale/static/src/app/screens/product_screen/product_screen.scss
@@ -41,6 +41,7 @@
         min-height: 60px;
         max-height: 80px;
     }
+    max-height: 175px;
 }
 
 
